--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/swagger-ui-express": "^4.1.8",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "event-loop-stats": "^1.4.1",
     "express": "^5.1.0",
-    "express-status-monitor": "^1.3.4",
+    "express-status-monitor": "^1.2.3",
     "helmet": "^8.1.0",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
@@ -23,6 +25,7 @@
     "@types/express": "^5.0.3",
     "@types/express-status-monitor": "^1.3.3",
     "@types/node": "^24.0.10",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
