--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn src/server.ts",
-    "start": "npm run build && node dist/server.js"
+    "start": "node -r ts-node/register -r ./src/core/opentelemetry/tracing.ts src/server.ts"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.13.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.60.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.202.0",
+    "@opentelemetry/instrumentation": "^0.202.0",
+    "@opentelemetry/instrumentation-express": "^0.51.0",
+    "@opentelemetry/instrumentation-http": "^0.202.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.202.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "@opentelemetry/semantic-conventions": "^1.34.0",
+    "@smithery/sdk": "^1.5.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "compression": "^1.8.0",
@@ -13,6 +26,7 @@
     "express": "^5.1.0",
     "express-status-monitor": "^1.2.3",
     "helmet": "^8.1.0",
+    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
